basalt/src/snapshots/basalt_tui__outline__tests__render_entries-2.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭Outline─────────────────────╮"
"│   Heading 1                │"
"│ ▾ Heading 2                │"
"│ │ ▾ Heading 2.1            │"
"│ │ │   Heading 2.1.1        │"
"│ │ ▾ Heading 2.2            │"
"│ │ │   Heading 2.2.1        │"
"│ ▾ Heading 3                │"
"│ │   Heading 3.1.1.1.1.1    │"
"╰────────────────────────────╯"
