basalt/src/snapshots/basalt_tui__outline__tests__reverse_hierarchy.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭───────────────── ▶ Outline ╮"
"│   Level 6                  │"
"│   Level 5                  │"
"│   Level 4                  │"
"│   Level 3                  │"
"│   Level 2                  │"
"│   Level 1                  │"
"│                            │"
"│                            │"
"╰────────────────────────────╯"
