basalt/src/snapshots/basalt_tui__outline__tests__sequential_all_levels.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭───────────────── ▶ Outline ╮"
"│ ▾ Heading 1                │"
"│ │ ▾ Heading 2              │"
"│ │ │ ▾ Heading 3            │"
"│ │ │ │ ▾ Heading 4          │"
"│ │ │ │ │ ▾ Heading 5        │"
"│ │ │ │ │ │   Heading 6      │"
"│                            │"
"│                            │"
"╰────────────────────────────╯"
