basalt/src/snapshots/basalt_tui__outline__tests__single_level.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭───────────────── ▶ Outline ╮"
"│   Heading 1                │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"╰────────────────────────────╯"
