basalt/src/snapshots/basalt_tui__outline__tests__special_characters_and_formatting.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭Outline─────────────────────╮"
"│ ▾ Heading with code and emp│"
"│ │ ▾ Heading with links and │"
"│ │ │ ▾ Heading with symbols:│"
"│ │ │ │ ▾ Heading with unicod│"
"│ │ │ │ │ ▾ Empty heading:   │"
"│ │ │ │ │ │   Very long headi│"
"│                            │"
"│                            │"
"╰────────────────────────────╯"
