basalt/src/snapshots/basalt_tui__outline__tests__stress_test_many_headings.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭Outline─────────────────────╮"
"│ ▾ Root                     │"
"│ │ ▾ Child 1                │"
"│ │ │ ▾ Grandchild 1.1       │"
"│ │ │ │ ▾ Great-grandchild 1.│"
"│ │ │ │ │ ▾ Great-great-grand│"
"│ │ │ │ │ │   Great-great-gre│"
"│ │ │ │ │   Great-great-grand│"
"│ │ │ │   Great-grandchild 1.│"
"╰────────────────────────────╯"
