basalt/src/snapshots/basalt_tui__outline__tests__whitespace_variations.snap
---
source: basalt/src/outline.rs
expression: terminal.backend()
---
"╭Outline─────────────────────╮"
"│ ▾ Heading with multiple spa│"
"│ │ ▾ Heading with tab       │"
"│ │ │ ▾ Heading with mixed wh│"
"│ │ │ │ ▾                    │"
"│ │ │ │ │                    │"
"│                            │"
"│                            │"
"│                            │"
"╰────────────────────────────╯"
